# flickrs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  flickrs-k8s.yaml
.ci/: kube-login.sh
flickrs-client/: .dockerignore  Cargo.toml  Dockerfile
flickrs-client/.cargo/: config
flickrs-client/flick-rs/: .eslintcache  config-overrides.js  package-lock.json  package.json
flickrs-client/flick-rs/public/: index.html  manifest.json
flickrs-client/flick-rs/src/: App.css  App.js  bootstrap.js  image.js  image_description.js  image_list.js  index.css  index.js  profile.js  registration.js  upload.js
flickrs-client/src/: hybrid.rs  lib.rs  main.rs
flickrs-client/src/data/: image.rs  mod.rs
flickrs-client/src/ui/: image_list.rs  mod.rs  theme.rs
flickrs-client/tests/: web.rs
flickrs-client/www/: index.html  index.js  like_button.js  package-lock.json  package.json
flickrs-client/www/src/scss/: index.scss  variables.scss
flickrs-server/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Rocket.toml
flickrs-server/migrations/2021-01-08-204002_create_images/: up.sql
flickrs-server/migrations/2021-01-11-084455_create_attributes/: down.sql  up.sql
flickrs-server/migrations/2021-01-14-164122_attributes_group/: down.sql  up.sql
flickrs-server/src/: key_manager.rs  lib.rs  models.rs  schema.rs
presentation/: .gitignore  document.tex
