[package]
name = "flickrs-client"
version = "0.1.0"
authors = ["Thibaut Vandervelden <thvdveld@vub.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.druid]
version = "0.7"
features = ["im", "image", "jpeg", "jpeg_rayon", "png"]
