[package]
name = "flickrs-server"
version = "0.1.0"
authors = ["Thibaut Vandervelden <thvdveld@vub.be>", "Tom Godden <tgodden@vub.be"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flickrs_sqlite"
path = "src/lib.rs"

[[bin]]
name = "flickrs_server"
path = "src/bin/main.rs"

[dependencies]
cife-rs = { version = "0.1.0", git = "https://github.com/cryptohackathon/cife-rs" }
rand = "0.7"

rocket = "0.4.6"
diesel = {version = "1.4.5", default-features = false, features = ["sqlite"]}
dotenv = "0.15.0"
rocket_contrib = {version = "0.4.6", default-features = false, features = ["diesel_sqlite_pool", "json"]}
serde = {version = "1.0.118", features = ["derive"]}
